--- a/src/Pages/Home/Banner/styles.css
+++ b/src/Pages/Home/Banner/styles.css
@@ -8,6 +8,7 @@
   font-size: 18px;
   background: #fff;
   width: 1250px;
+  border-radius: 8px;
 
   /* Center slide text vertically */
   display: flex;
@@ -20,8 +21,11 @@
 .swiper-slide img {
   display: block;
   width: 1250px;
+  border-radius: 8px;
 
   height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .swiper {
