--- a/src/Pages/Home/Banner/styles.css
+++ b/src/Pages/Home/Banner/styles.css
@@ -23,7 +23,8 @@
   width: 1250px;
   border-radius: 8px;
 
-  height: 100%;
+  height: 700px;
+
   object-fit: cover;
   object-position: center;
 }
